src/ffi.rs


    // Compressor
    pub fn ds4_metal_compressor_update_tensor(
        kv_cur: *const ds4_metal_tensor,
        sc_cur: *const ds4_metal_tensor,
        state_kv: *mut ds4_metal_tensor,
        state_score: *mut ds4_metal_tensor,
        comp_cache: *mut ds4_metal_tensor,
        model_map: *const c_void,
        model_size: u64,
        ape_offset: u64,
        ape_type: u32,
        norm_offset: u64,
        norm_type: u32,
        head_dim: u32,
        ratio: u32,
        pos: u32,
        comp_row: u32,
        n_rot: u32,
        n_ctx_orig: u32,
        freq_base: c_float,
        freq_scale: c_float,
        ext_factor: c_float,
        attn_factor: c_float,
        beta_fast: c_float,
        beta_slow: c_float,
        rms_eps: c_float,
    ) -> c_int;

    pub fn ds4_metal_dsv4_fp8_kv_quantize_tensor(
        x: *mut ds4_metal_tensor,
        n_tok: u32,
        head_dim: u32,
        n_rot: u32,
    ) -> c_int;

    // Indexer
    pub fn ds4_metal_indexer_score_one_tensor(
        scores: *mut ds4_metal_tensor,
        q: *const ds4_metal_tensor,
        weights: *const ds4_metal_tensor,
        index_comp: *const ds4_metal_tensor,
        n_comp: u32,
        n_head: u32,
        head_dim: u32,
        scale: c_float,
    ) -> c_int;

    pub fn ds4_metal_indexer_topk_tensor(
        selected: *mut ds4_metal_tensor,
        scores: *const ds4_metal_tensor,
        n_comp: u32,
        n_tokens: u32,
        top_k: u32,
    ) -> c_int;

    // Attention
    pub fn ds4_metal_attention_indexed_mixed_batch_heads_tensor(
        heads: *mut ds4_metal_tensor,
        model_map: *const c_void,
        model_size: u64,
        sinks_offset: u64,
        q: *const ds4_metal_tensor,
        raw_kv: *const ds4_metal_tensor,
        comp_kv: *const ds4_metal_tensor,
        topk: *const ds4_metal_tensor,
        n_tokens: u32,
        pos0: u32,
        n_raw: u32,
        raw_cap: u32,
        raw_start: u32,
        n_comp: u32,
        top_k: u32,
        window: u32,
        ratio: u32,
        n_head: u32,
        head_dim: u32,
    ) -> c_int;

    pub fn ds4_metal_attention_decode_heads_tensor(
        heads: *mut ds4_metal_tensor,
        model_map: *const c_void,
        model_size: u64,
        sinks_offset: u64,
        q: *const ds4_metal_tensor,
        raw_kv: *const ds4_metal_tensor,
        n_raw: u32,
        raw_cap: u32,
        raw_start: u32,
        comp_kv: *const ds4_metal_tensor,
        n_comp: u32,
        comp_mask: *const ds4_metal_tensor,
        use_mask: u32,
        n_head: u32,
        head_dim: u32,
    ) -> c_int;

    // Attention output
    pub fn ds4_metal_attention_output_low_q8_tensor(
        low: *mut ds4_metal_tensor,
        model_map: *const c_void,
        model_size: u64,
        out_a_offset: u64,
        group_dim: u64,
        rank: u64,
        n_groups: u32,
        heads: *const ds4_metal_tensor,
    ) -> c_int;

    // Router
    pub fn ds4_metal_router_select_tensor(
        selected: *mut ds4_metal_tensor,
        weights: *mut ds4_metal_tensor,
        probs: *mut ds4_metal_tensor,
        model_map: *const c_void,
        model_size: u64,
        bias_offset: u64,
        hash_offset: u64,
        hash_rows: u32,
        token: u32,
        n_expert_groups: u32,
        n_group_used: u32,
        has_bias: bool,
        hash_mode: bool,
        logits: *const ds4_metal_tensor,
    ) -> c_int;

    // MoE
    pub fn ds4_metal_routed_moe_one_tensor(
        out: *mut ds4_metal_tensor,
        gate: *mut ds4_metal_tensor,
        up: *mut ds4_metal_tensor,
        mid: *mut ds4_metal_tensor,
        experts: *mut ds4_metal_tensor,
        model_map: *const c_void,
        model_size: u64,
        gate_offset: u64,
        up_offset: u64,
        down_offset: u64,
        gate_type: u32,
        down_type: u32,
        gate_expert_bytes: u64,
        gate_row_bytes: u64,
        down_expert_bytes: u64,
        down_row_bytes: u64,
        expert_in_dim: u32,
        expert_mid_dim: u32,
        out_dim: u32,
        selected: *const ds4_metal_tensor,
        weights: *const ds4_metal_tensor,
        n_expert: u32,
        clamp: c_float,
        x: *const ds4_metal_tensor,
    ) -> c_int;

    // Shared expert
    pub fn ds4_metal_shared_gate_up_swiglu_q8_0_tensor(
        gate: *mut ds4_metal_tensor,
        up: *mut ds4_metal_tensor,
        mid: *mut ds4_metal_tensor,
        model_map: *const c_void,
        model_size: u64,
        gate_offset: u64,
        up_offset: u64,
        in_dim: u64,
        out_dim: u64,
        x: *const ds4_metal_tensor,
    ) -> c_int;
}